It is possible for a file to have viewport denoising enabled with no engine selected, which rapidly consumes all memory #78238

Closed
opened 2020-06-25 07:40:11 +02:00 by Jason Clarke · 4 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-24 21:51, hash: ec776f18ff

Short description of error
This commit changed the way the UI for viewport denoising works: hash 0a3bde6300

Files that were saved prior to this change and had OptiX viewport denoising enabled, when loaded with this change, will have viewport denoising enabled with no engine selected. When attempting to enable rendered viewport with the file in this state, Blender will rapidly use up memory until it either throws an error or crashes. Selecting a denoising engine or disabling viewport denoising stops the problem from occuring.

Exact steps for others to reproduce the error
Load a file that was saved with OptiX Viewport denoising from an older version of Blender that did not have the new denoising UI. One such .blend file is attached.

Without changing any viewport denoising settings, enable rendered mode in the 3D view. Note the memory mess.

Either unchecking viewport denoising or selecting an engine from this menu will prevent the issue from occurring.

I'm not sure it's possible to get a .blend file back into the "bad" state once an engine has been selected, but it will be an issue with any older files.

denoising_bug.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-24 21:51, hash: `ec776f18ff` **Short description of error** This commit changed the way the UI for viewport denoising works: hash `0a3bde6300` Files that were saved prior to this change and had OptiX viewport denoising enabled, when loaded with this change, will have viewport denoising enabled with no engine selected. When attempting to enable rendered viewport with the file in this state, Blender will rapidly use up memory until it either throws an error or crashes. Selecting a denoising engine or disabling viewport denoising stops the problem from occuring. **Exact steps for others to reproduce the error** Load a file that was saved with OptiX Viewport denoising from an older version of Blender that did not have the new denoising UI. One such .blend file is attached. Without changing any viewport denoising settings, enable rendered mode in the 3D view. Note the memory mess. Either unchecking viewport denoising or selecting an engine from this menu will prevent the issue from occurring. I'm not sure it's possible to get a .blend file back into the "bad" state once an engine has been selected, but it will be an issue with any older files. [denoising_bug.blend](https://archive.blender.org/developer/F8642071/denoising_bug.blend)
Author

Added subscriber: @JasonClarke

Added subscriber: @JasonClarke

This issue was referenced by blender/cycles@bec1c31172

This issue was referenced by blender/cycles@bec1c31172e71d0f0a449fbd66cc3ef70e9e4b82

This issue was referenced by 79c2581bfa

This issue was referenced by 79c2581bfaf0612f44c44cd09533fc8d231a2d49

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-06-25 15:49:45 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78238
No description provided.