Fix T78238: issue loading existing .blend files with Optix viewport denoiser

Also add additional validation to ensure the denoiser is supported before
trying to use it.